--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="interface">
 
 	<header id="cabecalho">
-		<hgroup> <!--definindo um grupo de titulos-->
+		<hgroup>
 			<h1>Google Glass</h1>
 			<h2>A revolução do Google está chegando</h2>
 		</hgroup>
@@ -43,12 +43,6 @@
 			<h3 class="direita">Atualizado em 06/Setembro/2019</h3>
 		</hgroup>
 	</header>
-<!--<br> quebra de linha
-	&nbsp; espaco de lina
-	<wbr> quebra de palavra
-	&shy; quebra de palavras com hifenização
--->
-
 		<h2>O que é</h2>
 		<p>O <span>Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google</em> Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
@@ -69,7 +63,7 @@
 		<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
 
 		<tr><td class="ce">Tela</td> <td class="cd">Resolução equivalente a tela de 25"</td></tr>
-		<tr><td rowspan="2" class="ce">Camera</td> <td class="cd">5MP para fotos</td></tr> <!--rowspan determina quantas linhas um td vai ocupar (colspan serve pra coluna)-->
+		<tr><td rowspan="2" class="ce">Camera</td> <td class="cd">5MP para fotos</td></tr>
 		<tr><td class="cd">720p para vídeos</td></tr>
 		<tr><td rowspan="2" class="ce">Conectividade</td> <td class="cd">Wi-Fi</td></tr>
 		<tr><td class="cd">Bluetooth</td></tr>
