--- a/multimidia.html
+++ b/multimidia.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Especificações</title>
+	<title>Multimídia</title>
 	<link rel="stylesheet" href="_css/estilo.css">
+	<link rel="stylesheet" href="_css/media.css">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 <body>
@@ -29,17 +30,28 @@
 		</nav>	
 	</header>
 
+<section id="corpo-full">
+	<article id="noticia_principal">
+	<header id="cabecalho_artigo">
+		<hgroup>
+			<h3>Glass > Multimídia</h3>
+			<h1>Sons e Vídeos</h1>
+			<h2>por Gabriel Espinosa</h2>
+			<h3 class="direita">Atualizado em 10/Setembro/2019</h3>
+		</hgroup>
+	</header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+		<!--WARNING !! ONLY MP3 FILE-->
 
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+	<div id="tv-radio">
+		<audio id="musica" controls="controls">
+			<source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mp3">
+			Desculpe, mas não foi possivel carregar o audio.
+		</audio>
+		<iframe id="video" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+	</div>
+	</article>
+</section>
 
 	<footer id="rodape">
 		<p>Copyright &copy; 2019 - by Gabriel Espinosa</p>
