Update multimidia.html file

--- a/multimidia.html
+++ b/multimidia.html
@@ -11,7 +11,7 @@
 <div id="interface">
 
 	<header id="cabecalho">
-		<hgroup> <!--definindo um grupo de titulos-->
+		<hgroup>
 			<h1>Google Glass</h1>
 			<h2>A revolução do Google está chegando</h2>
 		</hgroup>
