Add fotos.html file

--- a/fotos.html
+++ b/fotos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Especificações</title>
+	<title>Fotos</title>
 	<link rel="stylesheet" href="_css/estilo.css">
 	<link rel="stylesheet" href="_css/fotos.css">
 </head>
@@ -51,6 +51,8 @@
 			<li id="foto05"><span>Vários tipos de lente</span></li>
 			<li id="foto06"><span>Informações importantes</span></li>
 		</ul>
+	</article>
+</section>
 
 	<footer id="rodape">
 		<p>Copyright &copy; 2019 - by Gabriel Espinosa</p>
