--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -2,15 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Especificações</title>
+    <title>Fale Conosco</title>
     <link rel="stylesheet" href="_css/estilo.css">
+     <link rel="stylesheet" href="_css/form.css">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
 <body>
 <div id="interface">
 
     <header id="cabecalho">
-        <hgroup> <!--definindo um grupo de titulos-->
+        <hgroup>
             <h1>Google Glass</h1>
             <h2>A revolução do Google está chegando</h2>
         </hgroup>
@@ -29,38 +30,56 @@
         </nav>  
     </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full">
+    <article id="noticia_principal">
+    <header id="cabecalho_artigo">
+        <hgroup>
+            <h3>Fale Conosco > Contato</h3>
+            <h1>Formulário de Contato</h1>
+            <h2>por Gabriel Espinosa</h2>
+            <h3 class="direita">Atualizado em 10/Setembro/2019</h3>
+        </hgroup>
+    </header>
+    </article>
+</section>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+    <form>
+        <fieldset id="usuario">
+            <legend>Identificação do Usuário</legend>
+                <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="40" placeholder="Nome Completo"> </p>
+                <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"></p>
+                <p><label for="cMail">E-mail:</label> <input type="email" name="tMail" id="cMail" size="20" maxlength="40" placeholder="exemplo@ex.com"></p>
+                <fieldset id="sexo"><legend>Sexo:</legend>
+                    <input type="radio" name="tSexo" id="cMasc"> <label for="cMasc">Masculino</label><br>
+                    <input type="radio" name="tSexo" id="cFem"> <label for="cFem">Feminino</label></fieldset>
+                <p><label for="cNasc">Data de Nascimento: <input type="date" name="tNasc" id="cNasc"></label></p>
+        </fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+        <fieldset id="endereco">
+            <legend>Endereço do Usuário</legend>
+                <p><label for="cRua">Logradouro</label>: <input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav" ></p>
+                <p><label for="cNum">Número: </label><input type="number" name="tNum" id="cNum" min="0" max="99999"></p>
+                <p><label for="cEstado">Estado:</label> <input type="" name="tEstado" id="cEstado"></p>
+                <p><label for="cCidade">Cidade:</label> <input type="" name="tCidade" id="cCidade"></p>
+        </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+        <fieldset id="Mensagem">
+            <legend>Mensagem do Usuário</legend>
+                <p>Grau de Urgência:</p>
+                <p>Mensagem:</p>
+        </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+            <fieldset id="pedido">
+            <legend>Quero um Google Glass</legend>
+                <p>Gostaria de adquirir um Google Glass quando disponível</p>
+                <p>Cor:</p>
+                <p>Quantidade:</p>
+                <p>Preço Total: R$</p>
+        </fieldset>
 
 
-[BOTÃO ENVIAR]
+        [BOTÃO ENVIAR]
+    </form>
 
     <footer id="rodape">
         <p>Copyright &copy; 2019 - by Gabriel Espinosa</p>
