--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <title>Fale Conosco</title>
     <link rel="stylesheet" href="_css/estilo.css">
-     <link rel="stylesheet" href="_css/form.css">
+    <link rel="stylesheet" href="_css/form.css">
 </head>
 <script language="javascript" src="_javascript/funcoes.js"></script>
+<script>
+    function calc_total() {
+        var qtd = parseInt(document.getElementById('cQtd').value);
+        tot = qtd * 1500;
+        document.getElementById('cTot').value = tot;
+    }
+</script>
 <body>
 <div id="interface">
 
@@ -43,7 +50,7 @@
     </article>
 </section>
 
-    <form>
+    <form method="post" id="fContato" action="mailto:gabrielespinosa998@gmail.com" oninput="calc_total();">
         <fieldset id="usuario">
             <legend>Identificação do Usuário</legend>
                 <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="40" placeholder="Nome Completo"> </p>
@@ -59,26 +66,46 @@
             <legend>Endereço do Usuário</legend>
                 <p><label for="cRua">Logradouro</label>: <input type="text" name="tRua" id="cRua" size="13" maxlength="80" placeholder="Rua, Av, Trav" ></p>
                 <p><label for="cNum">Número: </label><input type="number" name="tNum" id="cNum" min="0" max="99999"></p>
-                <p><label for="cEstado">Estado:</label> <input type="" name="tEstado" id="cEstado"></p>
-                <p><label for="cCidade">Cidade:</label> <input type="" name="tCidade" id="cCidade"></p>
+                <p><label for="cEst">Estado:</label> <select name="tEst" id="cEst">
+                    <option>---------</option>
+                    <optgroup label="Região Sudeste">
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="MG">Minas Gerais</option>
+                    </optgroup>
+                    
+                    <optgroup label="Região Sul">
+                        <option value="PR">Paraná</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                        <option value="SC">Santa Catarina</option>
+                    </optgroup>
+
+                </select> </p>
+                <p><label for="cCid">Cidade:</label> <input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua Cidade" list="cidades"></p>
+                <datalist id="cidades">
+                    <option value="Rio de Janeiro"></option>
+                    <option value="Nova Iguaçu"></option>
+                    <option value="Niterói"></option>
+                </datalist>
         </fieldset>
 
-        <fieldset id="Mensagem">
+        <fieldset id="mensagem">
             <legend>Mensagem do Usuário</legend>
-                <p>Grau de Urgência:</p>
-                <p>Mensagem:</p>
+                <p><label for="cUrg">Grau de Urgência: Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2">Máx</label></p>
+                <p><label for="cMsg">Mensagem: 
+                    <textarea name="tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe aqui sua mensagem!"></textarea>
+                </p>
         </fieldset>
 
-            <fieldset id="pedido">
+        <fieldset id="pedido">
             <legend>Quero um Google Glass</legend>
-                <p>Gostaria de adquirir um Google Glass quando disponível</p>
-                <p>Cor:</p>
-                <p>Quantidade:</p>
-                <p>Preço Total: R$</p>
+                <p><input type="checkbox" name="tPed" id="tPed" checked><label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                <p><label for="cCor">Cor: <input type="color" name="tCor" id="cCor" value="#0000ff"></label></p>
+                <p><label for="cQtd">Quantidade: <input type="number" name="tQtd" id="cQtd" min="0" max="5" value="0"></label></p>
+                <p><label for="cTot">Preço Total: R$ <input type="text" name="tTot" id="cTot" placeholder="Total a pagar" readonly></label></p>
         </fieldset>
 
-
-        [BOTÃO ENVIAR]
+        <input type="image" name="tEnviar" id="cEnviar" src="_imagens/botao-enviar.png">
     </form>
 
     <footer id="rodape">
